--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+            }
+        }
+    }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
     }
     buildTypes {
         release {
@@ -25,8 +35,16 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation files('libs/HERE-sdk-javadoc.jar')
+    implementation(name: 'HERE-sdk', ext: 'aar')
+    implementation 'org.locationtech.jts:jts-core:1.15.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.stfalcon:chatkit:0.3.3'
 }
