--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="four.com.placesrecommendationsonheremap">
+          xmlns:tools="http://schemas.android.com/tools"
+          package="four.com.placesrecommendationsonheremap">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".StartActivity"
+            android:theme="@style/Preceq"
+            android:windowSoftInputMode="adjustPan|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatActivity" />
+
+        <meta-data
+            android:name="com.here.android.maps.appid"
+            android:value="5lQHCqS4YBY6fiZCNQPR"
+            tools:replace="android:value"/>
+        <meta-data
+            android:name="com.here.android.maps.apptoken"
+            android:value="5XvvWkXhEzkjTycdQfS61w"
+            tools:replace="android:value"/>
     </application>
 
 </manifest>
